[package]
name = "fama11y-tree"
version = "0.2.0"
edition = "2021"

[build]
lto = "fat"
codegen-units = 1

[dependencies]
futures = { version = "0.3", default-features = false }
#atspi = { git = "https://github.com/odilia-app/atspi.git", branch = "main", default-features = false, features = ["proxies-tokio", "tokio", "zbus"] }
atspi = { git = "https://github.com/odilia-app/atspi.git", branch = "rename-mdiz-layer-method", default-features = false, features = ["proxies-tokio", "tokio", "zbus"] }

display_tree = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
